# school-district-superintendent-finder-and-reachout

./: .gitignore  CLAUDE.md  DATA_SOURCES.md  README.md  ca_districts.txt  contact.md  il_directory.xls  ny_districts_list.json  ny_superintendents.json  tx_districts.json
backend/: .env.example  bulk_state_import.py  fix_matching.py  import_22_states_supts.py  import_federal_funding.py  pyproject.toml  requirements.txt  scrape_22_states.py  scrape_ma_supts.py  scrape_or_supts.py  scrape_urban_32_states.py  test_alabama.xlsx  wa_superintendent_import.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: campaigns.py  contacts.py  deps.py  districts.py  webhooks.py
backend/app/models/: __init__.py  campaign.py  contact.py  contact_source.py  district.py  email.py  user.py
backend/app/schemas/: campaign.py  contact.py  district.py  email.py
backend/app/services/: campaign_service.py  contact_service.py  district_service.py  email_service.py
backend/app/tasks/: campaign_processor.py  celery_app.py  enrichment.py  scheduled.py  scraping.py
backend/scrapers/: __init__.py  base.py  pipeline.py  utils.py
backend/scrapers/enrichment/: __init__.py  contact_enricher.py  email_verifier.py
backend/scrapers/nces/: __init__.py  ccd_importer.py  title_i.py  title_iii.py
backend/scrapers/states/: __init__.py  base_state.py  california.py  florida.py  illinois.py  new_york.py  nj_superintendent_scraper.py  texas.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  (+5 more)
(+19 files in other folders)
